<resources>
    <string name="app_name">Finaport</string>
    <string name="monthlyincome">MonthlyIncome</string>
    <string name="expense">Expense</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="rate">Rate</string>
    <string name="button">Button</string>
    <string name="emi">EMI</string>
    <string name="tenure">Tenure</string>
    <string name="loan">Loan</string>
    <string name="decorative_image_desc">image</string>
    <string name="back">Back</string>
    <string name="submitAll">Submit</string>
    <string name="continue_to_calculate_balance">Continue To Calculate Balance</string>
    <string name="calculate_the_emi">Calculate The EMI</string>
</resources>