<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2B48C"
    tools:context=".Balnce">

    <EditText
        android:id="@+id/MonthlyIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:hint="@string/monthlyincome"
        android:inputType="numberDecimal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:minHeight="56dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MonthlyIncome" />

    <EditText
        android:id="@+id/Expense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:hint="@string/expense"
        android:inputType="numberDecimal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"

        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:minHeight="56dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MonthlyIncome"
        tools:text="Expense" />

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:minHeight="60dp"
        android:text="@string/submitAll"
        android:backgroundTint="#424242"
        android:textAppearance="@android:style/TextAppearance.Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Expense" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textSize="20sp"
        android:textStyle="bold"

        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"/>

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:minHeight="60dp"
        android:text="@string/back"

        android:textAppearance="@android:style/TextAppearance.Widget.Button"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#424242"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />



    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/balance"
        android:contentDescription="@string/decorative_image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>